--- a/GoogleClone/Index.html
+++ b/GoogleClone/Index.html
@@ -21,6 +21,28 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="Main-logo">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+
+        </div>
+
+        <div class="main-searchBar"> 
+            <div class="main-input-container">
+                <span>
+                    <img src="" alt="">
+                </span>
+                <input type="text">
+                <a href=""></a>
+            </div>
+
+        </div>
+
+        <div class="main-buttoms">
+            <div><button>Buscar en google</button></div>
+            <div><button> Me siento con suerte</button></div>
+        </div>
+    </main>
     
 </body>
 </html>
