--- a/GoogleClone/Index.html
+++ b/GoogleClone/Index.html
@@ -29,18 +29,26 @@
 
         <div class="main-searchBar"> 
             <div class="main-input-container">
-                <span>
-                    <img src="" alt="">
+
+                <span class="search-icon">
+                    <img src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-512.png" alt="">
                 </span>
+
                 <input type="text">
-                <a href=""></a>
+
+                <a href="#" class="micro-icon"> <img src="https://freepngimg.com/download/microphone/70666-voice-microphone-google-search-logo-png-file-hd.png" alt=""> </a>
+
             </div>
 
         </div>
 
-        <div class="main-buttoms">
-            <div><button>Buscar en google</button></div>
-            <div><button> Me siento con suerte</button></div>
+        <div class="main-buttons">
+            <div>
+                <button>Buscar en google</button>
+            </div>
+            <div>
+                <button> Me siento con suerte </button>
+            </div>
         </div>
     </main>
     
