clase botones de busqueda

--- a/GoogleClone/Index.html
+++ b/GoogleClone/Index.html
@@ -36,7 +36,7 @@
 
                 <input type="text">
 
-                <a href="#" class="micro-icon"> <img src="https://freepngimg.com/download/microphone/70666-voice-microphone-google-search-logo-png-file-hd.png" alt=""> </a>
+                <a href="#" class="micro-icon"> <img src="css/pngwing.png" alt=""> </a>
 
             </div>
 
@@ -44,13 +44,27 @@
 
         <div class="main-buttons">
             <div>
-                <button>Buscar en google</button>
+                <button class="searchButtons">Buscar en google</button>
             </div>
             <div>
-                <button> Me siento con suerte </button>
+                <button class="searchButtons"> Me siento con suerte </button>
             </div>
         </div>
     </main>
+
+    <footer>  
+            <div class="leftSide footerLink">
+                <a href="#">Sobre google</a>
+                <a href="#">Publicidad </a>
+                <a href="#">Negocios </a>
+                <a href="#">Como Funciona la busqueda</a>
+            </div>
+            <div class="rightSide footerLink">
+                <a href="#">Privacidad </a>
+                <a href="#">Condiciones </a>
+                <a href="#">Preferencias</a>
+            </div>
+    </footer>
     
 </body>
 </html>
