--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@
 
     <footer>  
             <div class="leftSide footerLink">
-                <a href="#">Sobre google</a>
-                <a href="#">Publicidad </a>
-                <a href="#">Negocios </a>
-                <a href="#">Como Funciona la busqueda</a>
+                <a href="https://about.google/?utm_source=google-AR&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre google</a>
+
+                <a href="https://www.google.com/intl/es-419_ar/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad </a>
+
+                <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Negocios </a>
+
+                <a href="https://google.com/search/howsearchworks/?fg=1">Como Funciona la busqueda</a>
             </div>
             <div class="rightSide footerLink">
-                <a href="#">Privacidad </a>
-                <a href="#">Condiciones </a>
+                <a href="https://policies.google.com/privacy?hl=es-419&fg=1">Privacidad </a>
+                <a href="https://policies.google.com/terms?hl=es-419&fg=1">Condiciones </a>
                 <a href="#">Preferencias</a>
             </div>
     </footer>
